--- a/Site/style.css
+++ b/Site/style.css
@@ -8,6 +8,14 @@
     src: url(./fontes/KeplerStdBlack.otf);
 }
 
+@keyframes fade {
+    from{
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -18,6 +26,13 @@ body{
 body a{
     color: black;
     text-decoration: none;
+}
+
+p, h3, .box1, .imageBox{
+    /* aqui temos a animação do scroll, no qual o primeiro valor seria no nome declarado no @keyframe, o segundo seria a duração, o terceiro a direção (frente, trás ou ambos), e por mais que tenha mais opções, não é necessario colocar. */
+    animation: fade linear both; 
+    animation-timeline: view();  
+    animation-range: entry 0% cover 40%;
 }
 
 .navbarRight a{
@@ -70,6 +85,7 @@ body a{
 .navbarLeft{
     display: flex;
     align-items: center;
+    margin: 10px;
 }
 
 .HomeStyle{
@@ -79,24 +95,31 @@ body a{
 }
 
 .container{
-    height: 60vh;
+    height: 70vh;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     color: white;
-    background-image: url(./imagens/Banner.jpg);
+    background-image: url(./imagens/Banner2.jpg);
     background-size: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     align-items: end;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
+.banner .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container-sobreORV{
-    height: 20vh;
+    height: 100vh;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     color: white;
-    background-image: url(./imagens/Banner.jpg);
+    background-image: url(./imagens/Banner2.jpg);
     background-size: 100%;
     display: flex;
     justify-content: center;
@@ -123,25 +146,60 @@ body a{
 
 .box1{
     display: flex;
+    flex-direction: row;
 }
 
 .galeria{
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50px;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
-.galeria img{
-    border-radius: 45px;
-    transition: all 0.3s ease-in-out;
+.galeria .galeriaBox{
+    position: relative;
+    width: 180px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    border-radius: 10px;
+
+    /* margem horizontal */
+    margin: 0 -45px;
+
+    /* rotaciona o elemento de acordo com o valor armazenado na variável --r (declarada na div "galeriaBox", permitindo controle dinâmico sobre a rotação. */
+    transform: rotate(calc(var(--r) * 1deg)); 
+
+    color: white;
+    box-shadow: rgba(255, 255, 255, 0.05);
+    font-size: 20px;
 }
 
+.galeria .galeriaBox img{
+    border-radius: 20px;
+}
 
-.galeria img:hover{
-    transform: scale(1.05);
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+.galeria:hover .galeriaBox{
+
+    /* quando o mouse estiver em cima da div galeria, os elementos do galeriaBox terão a rotação resetada para 0, e a margem horizontal modificada para 20px */
+    transform: rotate(0deg);
+    margin: 0 20px;
+}
+
+.galeria .galeriaBox::before{
+    /* o attr recupera o valor de um atributo HTML, então nesse caso, ele ta pegando o data-text inserido na div da galeriaBox*/
+    content: attr(data-text);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .intro {
