--- a/Site/style.css
+++ b/Site/style.css
@@ -130,7 +130,7 @@ p, h3, .box1, .imageBox{
 .container-Login-Signup{
     height: 93vh;
     color: white;
-    background-image: url(./imagens/bg3.jpg);
+    background-image: url(./imagens/Banner2.jpg);
     background-size: 100%;
     display: flex;
     justify-content: center;
