--- a/public/style.css
+++ b/public/style.css
@@ -19,13 +19,13 @@
 }
 
 @keyframes height{
-    from{height: 70vh;}
-    to{height: 100vh;}
+    from{height: 85vh;}
+    to{height: 40vh;}
 }
 
 @keyframes height2{
-    from{height: 100vh;}
-    to{height: 70vh;}
+    from{height: 40vh;}
+    to{height: 85vh;}
 }
 
 body{
@@ -40,7 +40,7 @@ body a{
     text-decoration: none;
 }
 
-p, h3, .box1, .imageBox, .bannerContainer, .banner2{
+p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
     /* aqui temos a animação do scroll, no qual o primeiro valor seria no nome declarado no @keyframe, o segundo seria a duração, o terceiro a direção (frente, trás ou ambos), e por mais que tenha mais opções, não é necessario colocar. */
     animation: fade ease both; 
     animation-timeline: view();  
@@ -108,7 +108,7 @@ p, h3, .box1, .imageBox, .bannerContainer, .banner2{
 
 .container{
     animation: height2 2s;
-    height: 70vh;
+    height: 85vh;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     color: white;
@@ -129,7 +129,7 @@ p, h3, .box1, .imageBox, .bannerContainer, .banner2{
 
 .container-sobreORV{
     animation: height 2s;
-    height: 100vh;
+    height: 40vh;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     color: white;
@@ -215,11 +215,10 @@ p, h3, .box1, .imageBox, .bannerContainer, .banner2{
 
 .galeria{
     width: 100%;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
-    margin-bottom: 200px;
 }
 
 .galeria .galeriaBox{
@@ -273,7 +272,8 @@ p, h3, .box1, .imageBox, .bannerContainer, .banner2{
     align-items: center;
     justify-content: center;
     width: 50%;
-    margin: 50px;
+    margin: 80px;
+    font-size: 20px;
 }
 
 .mainTextBox{
@@ -480,3 +480,62 @@ p, h3, .box1, .imageBox, .bannerContainer, .banner2{
     cursor: url(./cursor/cursor-3.cur), auto;
 }
 
+.boxSobre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: black;
+    height: 100vh;
+    padding: 20px;
+}
+
+.boxSobreImg{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.boxSobreTexto{
+    width: 400px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+svg{
+    transition: scale 0.3s ease-in-out;
+    padding: 10px;
+}
+
+svg:hover{
+    scale: 1.10;
+}
+
+svg{
+    height: 50px;
+}
+
+.boxImpacto{
+    display: flex;
+    flex-direction: row;
+}
+
+.boxImpactoTexto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    padding: 20px;
+}
+
+.boxImpactoImg{
+    margin: 30px;
+}
