--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -37,24 +37,18 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
     animation-range: entry 0% cover 40%;
 }
 
-.navbarRight a{
+.navbarRight{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30px;
-    width: 100px;
-    border-radius: 10px;
-    border: none;
-    background-color: white;
     font-size: 15px;
     text-align: center;
     font-family: KeplerNormal;
     transition: all 0.3s ease-in-out;
 }
 
-.navbarRight a:hover{
+.navbarRight div:hover{
     transform: scale(1.05);
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
     cursor: url(./../cursor/cursor-3.cur), auto;
 }
 
