--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,9 +176,23 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
 .banner2 {
     background-color: black;
     border-radius: 30px;
-    height: 70vh;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.checkboxBanner2{
+    position: relative;
+    width: 50px;
+    height: 25px;
+    margin: 20px;
+    border-radius: 50px;
+}
+
+.banner2Text{
+    display: flex;
+    flex-direction: row;
 }
 
 .bannerContainer{
@@ -197,7 +211,7 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
     text-align: center;
     font-size: 22px;
     margin: 20px;
-    width: 40%;
+    width: 60%;
     height: 100%;
     opacity: 90%;
 }
