--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,6 +303,7 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
     justify-content: center;
     margin: 20px;
     width: 1000px;
+    font-size: 20px;
 }
 
 .subTexts{
@@ -557,4 +558,14 @@ svg{
     display: flex;
     justify-content: center;
     margin: auto;
+}
+
+.textBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    margin: 35px;
 }
