--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -8,16 +8,6 @@
     src: url(./fontes/KeplerStdBlack.otf);
 }
 
-@keyframes fade {
-    from{
-        opacity: 0;
-        scale: 0.9;
-    } to {
-        opacity: 1;
-        scale: 1;
-    }
-}
-
 body{
     margin: 0;
     padding: 0;
@@ -28,13 +18,6 @@ body{
 body a{
     color: black;
     text-decoration: none;
-}
-
-p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
-    /* aqui temos a animação do scroll, no qual o primeiro valor seria no nome declarado no @keyframe, o segundo seria a duração, o terceiro a direção (frente, trás ou ambos), e por mais que tenha mais opções, não é necessario colocar. */
-    animation: fade ease both; 
-    animation-timeline: view();  
-    animation-range: entry 0% cover 40%;
 }
 
 .navbarRight{
@@ -130,7 +113,7 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg{
 }
 
 .grafico{
-    width: 70vh;
+    width: 50vh;
     border: 2px;
     border-style: solid;
     margin: 10px;
@@ -268,6 +251,51 @@ button:hover{
     border-radius: 15px;
     border: none;
     background-color: #DCDCDC;
+}
+
+.KPIBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+}
+
+.KPIContent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50vh;
+    height: 50vh;
+    border: solid;
+    border-radius: 20px;
+}
+
+.KPIContent div{
+    padding: 5px;
+}
+
+.feed-container{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.postagem{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+    width: 80vh;
+    border-radius: 20px;
+    border-color: #3C3C3C;
+    border: solid;
+}
+
+.legendaKPI{
+    font-size: 20px;
 }
 
 
