--- a/public/css/style.css
+++ b/public/css/style.css
@@ -603,6 +603,11 @@ svg{
     width: 100vh;
     height: 100vh;
     justify-content: center;
+    font-size: 20px;
+}
+
+.infoTextBox h2, p{
+    padding: 40px;
 }
 
 .infoImg{
