--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -336,6 +336,36 @@ button:hover{
     border-radius: 5px;
 }
 
+.container-sobreORV{
+    animation: height 2s;
+    height: 40vh;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    color: white;
+    background-image: url(./../imagens/Banner2.jpg);
+    background-size: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.container-sobreORV h1{
+    display: inline-block;
+    animation: fade 1s;
+    opacity: 100%;
+}
+
+.colorLine{
+    background-color: black;
+    height: 5px;
+    width: 90%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
 
 
 
