--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,6 +121,21 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg, .postage
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
+.container2{
+    height: 20vh;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    color: white;
+    background-image: url(./../imagens/Banner2.jpg);
+    background-size: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: end;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+
 .banner .container{
     display: flex;
     justify-content: center;
