--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,7 +224,7 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg, .postage
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 22px;
+    font-size: 30px;
     margin: 20px;
     width: 60%;
     height: 100%;
@@ -288,7 +288,7 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg, .postage
     justify-content: center;
     width: 50%;
     margin: 80px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .mainTextBox{
@@ -296,6 +296,8 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg, .postage
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 22px;
+    width: 100vw;
 }
 
 .mainText{
@@ -305,8 +307,9 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg, .postage
     align-items: center;
     justify-content: center;
     margin: 20px;
-    width: 1000px;
-    font-size: 20px;
+    width: 100vw;
+    font-size: 25px;
+    
 }
 
 .subTexts{
@@ -319,6 +322,8 @@ p, h3, img, .box1, .imageBox, .bannerContainer, .banner2, .boxSobreImg, .postage
 .subTextsBox{
     padding: 30px;
     text-align: center;
+    width: 30vw;
+    height: 30vh;
 }
 
 .imageBoxes{
@@ -554,7 +559,7 @@ svg{
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 20px;
+    font-size: 23px;
     padding: 20px;
 }
 
@@ -584,7 +589,7 @@ svg{
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     margin: 35px;
 }
 
@@ -730,4 +735,16 @@ svg{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.apocalipseContainer{
+    display: flex;
+    flex-direction: row;
+}
+
+.apocalipseBox{
+    background-image: url(./../imagens/apocalipse\ wallpaper.jpg);
+    background-size: 100%;
+    width: 20vw;
+    border-radius: 20px;
 }
